Updated deleting comments

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -48,19 +48,22 @@
                 <% campground.comments.forEach(function(comment){ %>
                     <div class="row">
                         <div class="col-md-12">
-                            <strong class="comment-display"><%= comment.author.username %></strong>
-                            <span class="comment-display pull-right"><%= moment(comment.createdAt).fromNow() %></span>
-                            <p class="comment-display">
-                                <%= comment.text %>
-                            </p>
-                            <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
-                                <a class="comment-button-<%= comment._id %> btn btn-xs btn-warning" 
-                                href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
-                                <form class="delete-form comment-button" id="delete-comment-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE"
-                                method="POST">
-                                    <input type="submit" class="btn btn-xs btn-danger" value="Delete">
-                                </form> 
-                            <% } %>
+                            <% var myVar = comment._id %>
+                            <div class="cmt-block" data-value="<%= JSON.stringify(myVar) %>">
+                                <strong class="comment-display"><%= comment.author.username %></strong>
+                                <span class="comment-display pull-right"><%= moment(comment.createdAt).fromNow() %></span>
+                                <p class="comment-display">
+                                    <%= comment.text %>
+                                </p>
+                                <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                                    <a class="comment-display btn btn-xs btn-warning" 
+                                    href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a>
+                                    <form class="delete-form dlt-cmt-form comment-display" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=DELETE"
+                                    method="POST" data-value="<%= JSON.stringify(myVar) %>">
+                                        <input type="submit" class="btn btn-xs btn-danger" value="Delete">
+                                    </form> 
+                                <% } %>
+                            </div>
                         </div>
                     </div>
                 <% }); %>
