--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -30,7 +30,7 @@
                     <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
                         <a class="btn btn-xs btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
                         <form class="delete-form" id="delete-camp-form" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                            <button class="btn btn-xs btn-danger">Delete</button>
+                            <button type="submit" class="btn btn-xs btn-danger">Delete</button>
                         </form>
                     <% } %>
                 </div>
