--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -4,7 +4,20 @@
     <div class="well" id="contact">
         <h1>Contact</h1>
         <hr class="about-contact">
-        <h3>Email: <a href="mailto:johnclancy@outlook.com">johnclancy@outlook.com</a></h3>
+        <p>
+            Spicy jalapeno bacon ipsum dolor amet leberkas picanha pork loin alcatra filet mignon short loin pork belly 
+            spare ribs corned beef. Beef ribs sausage pig, short loin pork chop ribeye tri-tip drumstick bacon sirloin 
+            t-bone frankfurter tail. Pork prosciutto cow beef ribs kevin biltong turkey jerky short loin turducken beef 
+            pancetta tail. Short ribs landjaeger shankle sirloin. Turkey andouille biltong pork chicken kielbasa, landjaeger 
+            pork loin shoulder flank pancetta filet mignon short loin capicola. Shank t-bone tenderloin ground round bresaola 
+            porchetta, shoulder kielbasa chuck chicken swine pork ball tip brisket. Strip steak picanha rump doner short loin, 
+            brisket kielbasa shankle frankfurter tongue kevin.
+        </p>
+        <p>
+            Pork shank kielbasa bresaola turkey spare ribs. Pastrami cupim alcatra tail boudin tenderloin ground round. Porchetta 
+            biltong strip steak, chicken ground round pork loin short loin beef kielbasa cupim pastrami filet mignon. Sirloin 
+            doner rump sausage. Jerky sirloin tongue venison swine.
+        </p>
     </div>
 </div>
 
